# Visual-cryptography

./: CMakeLists.txt  README.md  ascii_art.cpp  encrypt_image.cpp  encrypt_image_working.cpp  lile.cpp
include/: ASCIIArtTask.hpp  ClassicVCTask.hpp  DualLayerVCTask.hpp  Task.hpp  Utils.hpp
src/: ASCIIArtTask.cpp  ClassicVCTask.cpp  DualLayerVCTask.cpp  TaskFactory.cpp  Utils.cpp  main.cpp
tests/: main.cpp
